<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="Fragments.SearchFragment"
        android:padding="15dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/what_would_you_like_to_sell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:hint="@string/name_of_item"/>

            <EditText
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/price"/>

            <EditText
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:hint="@string/description_of_the_object"/>

            <TextView
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/add_choose_categories" />

            <Spinner
                android:id="@+id/add_category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/search_loading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/add_choose_subCategories" />

            <Spinner
                android:id="@+id/add_subCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/search_chooseCategory" />

        </LinearLayout>


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/select_image_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/camera_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/take_a_photo"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/select_image_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/gallery_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/choose_from_gallery" />

        </LinearLayout>

        <Button
            android:id="@+id/post_item_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/post_my_item"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>