<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Fragments.SearchFragment"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/search_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:hint="@string/name_of_item"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/search_minprice"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:inputType="number"
                android:hint="@string/search_minprice"/>

            <EditText
                android:id="@+id/search_maxprice"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:inputType="number"
                android:hint="@string/search_maxprice"/>
        </LinearLayout>

        <TextView
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/search_choose_categories" />


        <Spinner
            android:id="@+id/search_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/search_loading" />

        <Spinner
            android:id="@+id/search_subCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/search_chooseParent" />

    </LinearLayout>

    <Button
        android:id="@+id/search_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/action_search"
        android:textColor="@color/white"/>

</LinearLayout>

