<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:onClick="showItemDescription"
    android:orientation="horizontal"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/list_item_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/item_photo"
        app:srcCompat="@drawable/default_photo" />

    <RelativeLayout
        android:id="@+id/item_list_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_name"
            android:text="@string/item_price" />
    </RelativeLayout>
</LinearLayout>
