<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <Views.ItemImageView
            android:id="@+id/item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_photo" />

        <RelativeLayout
            android:id="@+id/item_name_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_photo">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:text="@string/item_price"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ToggleButton
            android:id="@+id/favorite"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toTopOf="@id/divider_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_photo" />

        <View
            android:id="@+id/divider_top"
            style="@style/divider"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/item_name_price" />

        <RelativeLayout
            android:id="@+id/seller_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_top">

            <TextView
                android:id="@+id/contact_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_seller"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/contact_seller"
                android:layout_marginTop="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/seller_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/default_photo" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/seller_photo"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="66dp">

                    <TextView
                        android:id="@+id/seller_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seller_name"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/seller_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/seller_name"
                        android:text="@string/seller_email"
                        android:textSize="14sp" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:id="@+id/divider_bottom"
            style="@style/divider"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/seller_info" />

        <RelativeLayout
            android:id="@+id/item_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom">

            <TextView
                android:id="@+id/additional_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/additional_info"
                android:layout_marginStart="16dp"/>

            <Views.ExpandableTextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorHighlightedLight"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="25dp"
                android:text="@string/item_desc"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/additional_info"/>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>